Check on floating point errors in pixel scale calculation
See the added error description for the full discussion: in short, some
programs include floating point errors in their WCS FITS header keywords
and these can bias the pixel scale measurements (and produce an error
message sometimes). So with this commit, a warning will now be printed to
guide the users on the (possible) problem and how to solve it.

This was brought up in a discussion with Leindert Boogaard.

--- a/THANKS
+++ b/THANKS
@@ -18,6 +18,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Marjan Akbari                        mrjakbari@gmail.com
     Karl Berry                           karl@gnu.org
     Roland Bacon                         roland.bacon@univ-lyon1.fr
+    Leindert Boogaard                    boogaard@strw.leidenuniv.nl
     Nicolas Bouché                       nicolas.bouche@irap.omp.eu
     Fernando Buitrago                    fbuitrago@oal.ul.pt
     Adrian Bunk                          bunk@debian.org
