Fits prints full list of header keys when only --hdu given
When only the `--hdu' option is given on the command-line (not in a
configuration file) with no other operation (on keywords or HDUs)
requested, the full list of header keywords is printed (as if you had only
called `--printallkeys').

This feature was suggested by Leindert Boogaard.

--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,11 @@ GNU Astronomy Utilities NEWS                          -*- outline -*-
 
 ** New features
 
+  Fits: when an extension/HDU is identified on the command-line with the
+  `--hdu' option and no operation is requested, the full list of header
+  keywords in that HDU will be printed (as if only `--printallkeys' was
+  called).
+
   NoiseChisel: with the new `--widekernel' option it is now possible to use
   a wider kernel to identify which tiles contain signal. The rest of the
   steps (identifying the quantile threshold on the selected tiles and etc)
